--- a/Magento_ConfigurableProduct/templates/product/view/options/configurable.phtml
+++ b/Magento_ConfigurableProduct/templates/product/view/options/configurable.phtml
@@ -147,7 +147,7 @@ $attributes = $block->decorateArray($block->getAllowAttributes());
          class="mb-6"
     >
         <h2 class="text-gray-900 text-xl title-font font-medium mb-4">
-            <?= $escaper->escapeHtml(__('Product Options:')) ?>
+            <?= $escaper->escapeHtml(__('Options')) ?>
         </h2>
     <?php foreach ($attributes as $attribute): ?>
         <div class="flex border-t last:border-b  border-gray-300 py-2 w-full items-center">
