#103 Add tooltips to PDP swatches

--- a/Magento_Swatches/templates/product/view/renderer.phtml
+++ b/Magento_Swatches/templates/product/view/renderer.phtml
@@ -24,6 +24,8 @@ $attributes = $block->decorateArray($block->getAllowAttributes());
                 swatchConfig: <?= /* @noEscape */ $block->getJsonSwatchConfig() ?>,
                 allowedAttributeOptions: [],
                 selectedValues: {},
+                activeTooltipItem: false,
+                tooltipPositionElement: false,
                 findSimpleIndex: function findSimpleIndex () {
                     var productIndexes = this.optionConfig.index;
                     var $this = this;
@@ -139,25 +141,45 @@ $attributes = $block->decorateArray($block->getAllowAttributes());
                     });
                 },
                 getAttributeSwatchData(attributeId) {
-                    const swatchConfig = this.swatchConfig[attributeId];
+                    const swatchConfig = Object.assign({}, this.swatchConfig[attributeId]);
                     swatchConfig['details'] = JSON.parse(swatchConfig['additional_data']);
 
                     return swatchConfig;
                 },
-                getOptionSwatchType(attributeId) {
-                    const swatchConfig = this.getAttributeSwatchData(attributeId);
-                    if (this.getAttributeSwatchData(attributeId).details['swatch_input_type'] === 'text') {
-                        return 'text';
-                    } else {
-                        if (this.getAttributeSwatchData(attributeId).details['use_product_image_for_swatch']) {
-                            return 'image';
-                        } else {
-                            return 'visual';
-                        }
-                    }
+                isTextSwatch(attributeId) {
+                    return this.getAttributeSwatchData(attributeId).details['swatch_input_type'] === 'text';
                 },
                 getSwatchBackgroundStyle(attributeId, itemId) {
-                    return 'background-color:' + this.swatchConfig[attributeId][itemId].value;
+                    const config = this.swatchConfig[attributeId][itemId];
+
+                    if (this.isTextSwatch(attributeId)) {
+                        return '';
+                    } else {
+                        if (config.type.toString() === "1") {
+                            return 'background-color:' + config.value;
+                        } else if (config.type.toString() === "2") {
+                            return "background: #ffffff url('" + config.value + "') no-repeat center";
+                        }
+                        return '';
+                    }
+                },
+                getSwatchConfig(attributeId, itemId) {
+                    return this.swatchConfig[attributeId][itemId];
+                },
+                getTooltipImageStyle(attributeId, itemId) {
+                    const config = this.getSwatchConfig(attributeId, itemId);
+
+                    if (this.isTextSwatch(attributeId)) {
+                        return '';
+                    } else {
+                        if (config.type.toString() === "1") {
+                            return 'background-color:' + config.value + '; width: 110px; height: 90px;';
+                        } else if (config.type.toString() === "2") {
+                            return "background: #ffffff url('" + config.thumb +
+                                "') center center no-repeat; width: 110px; height: 90px;";
+                        }
+                        return '';
+                    }
                 }
             }
         }
@@ -186,74 +208,70 @@ $attributes = $block->decorateArray($block->getAllowAttributes());
             </label>
             <div class="ml-2 text-gray-900 text-left w-1/2">
                 <div
+                     class="flex space-x-4 -mx-4 items-center swatch-attribute-options"
                      role="radiogroup"
                      aria-labelledby="radiogroup-label"
                 >
-                    <template x-if="getOptionSwatchType(<?= (int) $attributeId ?>) === 'text'">
-                        <div class="flex space-x-4 -mx-4 items-center swatch-attribute-options">
-                            <template x-for="(item, index) in getAllowedAttributeOptions(<?= (int) $attributeId ?>)"
-                                      :key="item.id"
+                    <template x-for="(item, index) in getAllowedAttributeOptions(<?= (int) $attributeId ?>)"
+                              :key="item.id"
+                    >
+                        <label
+                            :for="'attribute-option-'+item.id"
+                            :class="{'border-container-lighter ring ring-primary ring-opacity-50':
+                               (selectedValues[<?= (int)$attributeId ?>] === item.id),
+                                 'border-container-darker': (selectedValues[<?= (int)$attributeId ?>] !== item.id) }"
+                            class="swatch-option border-2 cursor-pointer bg-container-lighter shadow-sm"
+                            :style="getSwatchBackgroundStyle('<?= (int) $attributeId ?>',item.id)"
+                            @mouseover.self="activeTooltipItem = { attribute: '<?= (int) $attributeId ?>', item: item.id }; tooltipPositionElement = $event.target;"
+                            @mouseleave.self="activeTooltipItem = false"
+                        >
+                            <input
+                                :id="'attribute-option-'+item.id"
+                                :value="item.id"
+                                name="super_attribute[<?= (int) $attributeId ?>]"
+                                type="radio"
+                                class="border-0 focus:border-0 focus:ring-0 absolute inline-block p-0"
+                                style="z-index:-1"
+                                x-on:change="changeOption(<?= (int) $attributeId ?>, event.target.value)"
+                                :checked="selectedValues[<?= (int) $attributeId ?>] === item.id"
+                                :required="getAllowedAttributeOptions(<?= (int) $attributeId ?>).filter(
+                                        attributeOption => selectedValues[attributeOption]
+                                    ).length === 0"
                             >
-                                <label
-                                    :for="'attribute-option-'+item.id"
-                                    :class="{'border-container-lighter ring ring-primary ring-opacity-50':
-                                       (selectedValues[<?= (int)$attributeId ?>] === item.id),
-                                         'border-container-darker': (selectedValues[<?= (int)$attributeId ?>] !== item.id) }"
-                                    class="swatch-option border-2 cursor-pointer bg-container-lighter shadow-sm"
-                                >
-                                    <input
-                                        :id="'attribute-option-'+item.id"
-                                        :value="item.id"
-                                        name="super_attribute[<?= (int) $attributeId ?>]"
-                                        type="radio"
-                                        class="border-0 focus:border-0 focus:ring-0 absolute inline-block p-0"
-                                        style="z-index:-1"
-                                        x-on:change="changeOption(<?= (int) $attributeId ?>, event.target.value)"
-                                        :checked="selectedValues[<?= (int) $attributeId ?>] === item.id"
-                                        :required="getAllowedAttributeOptions(<?= (int) $attributeId ?>)
-                                            .filter(attributeOption => selectedValues[attributeOption]).length === 0"
-                                    >
-                                    <div x-text="item.label"></div>
-                            </template>
-                        </div>
-                    </template>
-                    <template x-if="getOptionSwatchType(<?= (int) $attributeId ?>) === 'visual'">
-                        <div class="flex space-x-4 -mx-4 items-center swatch-attribute-options">
-                            <template x-for="(item, index) in getAllowedAttributeOptions(<?= (int) $attributeId ?>)"
-                                      :key="item.id"
-                            >
-                                <label
-                                    :for="'attribute-option-'+item.id"
-                                    :class="{'border-container-lighter ring ring-primary ring-opacity-50':
-                                       (selectedValues[<?= (int)$attributeId ?>] === item.id),
-                                         'border-container-darker': (selectedValues[<?= (int)$attributeId ?>] !== item.id) }"
-                                    class="swatch-option border-2 cursor-pointer bg-container-lighter shadow-sm"
-                                    :style="getSwatchBackgroundStyle('<?= (int) $attributeId ?>',item.id)"
-                                >
-                                    <input
-                                        :id="'attribute-option-'+item.id"
-                                        :value="item.id"
-                                        name="super_attribute[<?= (int) $attributeId ?>]"
-                                        type="radio"
-                                        class="border-0 focus:border-0 focus:ring-0 absolute inline-block p-0"
-                                        style="z-index:-1"
-                                        x-on:change="changeOption(<?= (int) $attributeId ?>, event.target.value)"
-                                        :checked="selectedValues[<?= (int) $attributeId ?>] === item.id"
-                                        :required="getAllowedAttributeOptions(<?= (int) $attributeId ?>).filter(
-                                                attributeOption => selectedValues[attributeOption]
-                                            ).length === 0"
-                                    >
-                                    <div x-text="item.label"
-                                         class="sr-only"
-                                    ></div>
-                            </template>
-                        </div>
+                            <div x-text="item.label"
+                                 :class="{ 'sr-only' : !isTextSwatch(<?= (int) $attributeId ?>) }"
+                            ></div>
                     </template>
                 </div>
             </div>
         </div>
         <?php endforeach; ?>
-        </div>
+        <template x-if="activeTooltipItem">
+            <div class="absolute"
+                 :style="tooltipPositionElement ?
+                    `top: ${tooltipPositionElement.offsetTop}px; left: ${tooltipPositionElement.offsetLeft}px;` :
+                     ''"
+            >
+                <div class="shadow-lg">
+                    <div class="absolute top-0 left-0 z-10 min-w-20 p-2 -mt-6 text-sm leading-tight text-black transform
+                -translate-x-1/2 -translate-y-full bg-white rounded-lg shadow-lg text-center">
+                    <template x-if="!isTextSwatch(activeTooltipItem.attribute)">
+                        <div class="inline-block"
+                             :style="getTooltipImageStyle(activeTooltipItem.attribute, activeTooltipItem.item)"
+                        ></div>
+                    </template>
+                        <span class="subtitle text-lg font-semibold"
+                              x-html="getSwatchConfig(activeTooltipItem.attribute, activeTooltipItem.item).label"
+                        ></span>
+                    </div>
+                    <svg class="absolute z-10 w-8 h-8 text-white transform -translate-x-1/5
+                -translate-y-8 fill-current stroke-current" width="12" height="12">
+                        <rect x="12" y="-12" width="12" height="12" transform="rotate(45)" class="shadow-xl" />
+                    </svg>
+                </div>
+            </div>
+        </template>
+    </div>
 
 <?php endif;?>
 
