--- a/Magento_Swatches/templates/product/view/renderer.phtml
+++ b/Magento_Swatches/templates/product/view/renderer.phtml
@@ -108,7 +108,7 @@ $attributes = $block->decorateArray($block->getAllowAttributes());
                                             ).length === 0"
                                     >
                                     <div x-html="item.label"
-                                         :class="{ 'sr-only' : !isTextSwatch(<?= (int) $attributeId ?>) }"
+                                         :class="{ 'sr-only' : !isTextSwatch(<?= (int) $attributeId ?>, item.id) }"
                                     ></div>
                             </template>
                         </div>
@@ -124,7 +124,7 @@ $attributes = $block->decorateArray($block->getAllowAttributes());
                 <div class="shadow-lg">
                     <div class="absolute top-0 left-0 z-10 min-w-20 p-2 -mt-6 text-sm leading-tight text-black transform
                 -translate-x-1/2 -translate-y-full bg-white rounded-lg shadow-lg text-center">
-                    <template x-if="!isTextSwatch(activeTooltipItem.attribute)">
+                    <template x-if="!isTextSwatch(activeTooltipItem.attribute, activeTooltipItem.item)">
                         <div class="inline-block border border-container shadow-sm"
                              :style="getTooltipImageStyle(activeTooltipItem.attribute, activeTooltipItem.item)"
                         ></div>
